--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Noughts & Crosses</title>
+  <title>Connect 4</title>
   <meta content="text/html; charset=utf-8"
         http-equiv="content-type">
   <link href="main.css"
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Noughts & Crosses</h1>
-  <p id="winner-display">the winner is <span id="winner-name"></span></p>
+  <p id="winner-display">The winner is <span id="winner-name"></span></p>
   <div class="flex-container">
   
   <div class="player-one">
