--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -9,7 +9,7 @@
         type="text/css">
 </head>
 <body>
-  <h1>Noughts & Crosses</h1>
+  <h1>Connect 4</h1>
   <p id="winner-display">The winner is <span id="winner-name"></span></p>
   <div class="flex-container">
   
