--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -20,7 +20,7 @@
      <div class="input-grid">
      <p id="hidden-player" style="display: none;"></p>
      <input id="name-box" type="text" placeholder="Enter player 1 name" maxlength="15">
-     <button id="btn">Submit</button>
+     <button class="button-style" id="btn">Submit</button>
      </div>
   </div>
   
@@ -138,12 +138,11 @@
      <div class="input-grid">
           <p id="hidden-player2" style="display: none;"></p>
           <input id="name-box2" type="text" placeholder="Enter player 1 name" maxlength="15">
-          <button id="btn2">Submit</button>
+          <button class="button-style" id="btn2">Submit</button>
      </div>
   </div>
   </div>
   <button id="reset-button">Reset</button>
-  <p>Remember to open your dev tools by pressing F12 to view log messages and errors!</p>
   <script src="connect-4-index.js"
         type="text/javascript"></script> 
   <script src="connect-connectors.js"
